--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     compile group: 'org.projectlombok', name: 'lombok', version: '0.11.0'
 
-
+    compile 'com.github.dmytrodanylyk:android-morphing-button:98a4986e56'
+    compile 'com.android.support:design:25.3.1'
 }
 
