--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,6 @@ buildscript {
     repositories {
         jcenter()
     }
-    dependencies {
-        classpath "io.realm:realm-gradle-plugin:3.2.0"
-    }
 }
 
 
@@ -48,10 +45,10 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support:palette-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.adityak:browsemyfiles:1.4'
     compile 'org.parceler:parceler-api:1.1.7'
     annotationProcessor 'org.parceler:parceler:1.1.7'
+    compile 'com.github.woxthebox:draglistview:1.4.4'
 }
 
 
