--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
-        android:name=".activitys.App"
+        android:name=".activity.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activitys.LoginActivity"
+            android:name=".activity.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -22,14 +22,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activitys.ModeActivity"
+            android:name=".activity.ModeActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".activitys.DrawerActivity"
+            android:name=".activity.DrawerActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".activitys.DragDropActivity"
-            android:theme="@style/AppTheme" />
+            android:name=".activity.SongDragAndDropActivity"
+            android:theme="@style/ToolbarTheme" />
     </application>
 
 </manifest>
