--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.7'
     annotationProcessor 'org.parceler:parceler:1.1.7'
     compile 'com.github.woxthebox:draglistview:1.4.4'
-    compile group: 'org.projectlombok', name: 'lombok', version: '0.11.0'
+    provided 'org.projectlombok:lombok:1.12.6'
     compile 'com.github.dmytrodanylyk:android-morphing-button:98a4986e56'
 }
 
