fitting to connect mode layout with run layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity
             android:name=".activity.SongDragAndDropActivity"
             android:theme="@style/ToolbarTheme" />
-        <activity android:name=".activity.RunActivity"></activity>
+        <activity android:name=".activity.RunActivity" />
+        <activity android:name=".activity.ModeActivity" />
     </application>
 
 </manifest>
