--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '0.11.0'
     compile 'com.github.dmytrodanylyk:android-morphing-button:98a4986e56'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
 }
 
