--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".activity.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -26,11 +26,8 @@
             android:name=".activity.SongDragAndDropActivity"
             android:theme="@style/ToolbarTheme" />
         <activity android:name=".activity.RunActivity" />
-        <activity android:name=".activity.DrawerActivity" />
+        <activity android:name=".activity.ModeActivity" />
         <activity android:name=".activity.SelectedMode" />
-        <activity
-            android:name=".activity.ModeActivity"
-            android:theme="@style/LoginTheme" />
         <activity android:name=".activity.NewAccountActivity" />
     </application>
 
