--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "sdacademy.pl.intervalapp"
+        applicationId "interval.com.intervalapp"
         minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.countdownTextView.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -43,8 +43,8 @@ dependencies {
     compile 'com.adityak:browsemyfiles:1.4'
     compile 'org.parceler:parceler-api:1.1.7'
     compile 'com.github.woxthebox:draglistview:1.4.4'
-    compile 'com.github.dmytrodanylyk:android-morphing-button:98a4986e56'
     compile 'com.flaviofaria:kenburnsview:1.0.7'
+    compile 'com.mikhaellopez:circularprogressbar:1.1.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     annotationProcessor 'org.parceler:parceler:1.1.7'
