--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
-
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -45,9 +44,12 @@ dependencies {
     compile 'com.github.woxthebox:draglistview:1.4.4'
     compile 'com.flaviofaria:kenburnsview:1.0.7'
     compile 'com.mikhaellopez:circularprogressbar:1.1.1'
+    compile 'com.google.firebase:firebase-auth:10.2.6'
+    compile 'com.google.firebase:firebase-core:10.2.6'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     annotationProcessor 'org.parceler:parceler:1.1.7'
     provided 'org.projectlombok:lombok:1.12.6'
 }
 
+apply plugin: 'com.google.gms.google-services'
