--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".App"
@@ -18,7 +19,6 @@
             android:theme="@style/LoginTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,7 +29,9 @@
         <activity android:name=".activity.ModeActivity" />
         <activity android:name=".activity.SelectedMode" />
         <activity android:name=".activity.NewAccountActivity" />
-        <activity android:name=".activity.SummaryActivity"></activity>
+        <activity android:name=".activity.SummaryActivity"/>
+        <activity android:name=".helper.ResetPasswordHelper"/>
+        <activity android:name=".activity.ResetPasswordActivity"/>
     </application>
 
 </manifest>
