--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "interval.com.intervalapp"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,23 +35,25 @@ dependencies {
     })
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:8.6.0'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:percent:25.3.1'
-    compile 'com.android.support:palette-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:design:26.0.1'
+    compile 'com.android.support:cardview-v7:26.0.1'
+    compile 'com.android.support:percent:26.0.1'
+    compile 'com.android.support:palette-v7:26.0.1'
     compile 'com.adityak:browsemyfiles:1.4'
     compile 'org.parceler:parceler-api:1.1.7'
     compile 'com.github.woxthebox:draglistview:1.4.4'
     compile 'com.flaviofaria:kenburnsview:1.0.7'
     compile 'com.mikhaellopez:circularprogressbar:1.1.1'
-    compile 'com.google.firebase:firebase-auth:10.2.6'
-    compile 'com.google.firebase:firebase-core:10.2.6'
+    compile 'com.google.firebase:firebase-auth:11.2.0'
+    compile 'com.google.firebase:firebase-core:11.2.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     annotationProcessor 'org.parceler:parceler:1.1.7'
-    provided 'org.projectlombok:lombok:1.12.6'
-    compile 'com.android.support:multidex:1.0.1'
+    annotationProcessor "org.projectlombok:lombok:1.16.18"
+    provided 'org.projectlombok:lombok:1.16.18'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'com.android.support:multidex:1.0.2'
     compile 'us.belka:androidtoggleswitch:1.2.2'
     compile 'com.github.bmarrdev:android-DecoView-charting:v0.9.3'
     compile 'com.github.polok:clicknumberpicker:0.1.2'
