--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath "io.realm:realm-gradle-plugin:3.2.0"
+        classpath 'com.android.tools.build:gradle:3.0.0-beta3'
+        classpath "io.realm:realm-gradle-plugin:3.5.0"
         classpath 'com.google.gms:google-services:3.1.0'
 
 
@@ -20,6 +20,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+        google()
     }
 }
 
